<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="20dp"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni"
        app:met_floatingLabel="normal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/DNI"
        android:padding="5dp"
        android:textColor="@color/colorPrimaryDark" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        app:met_floatingLabel="normal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/contrasena"
        android:padding="5dp"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textPassword"/>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="263dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:text="@string/recordar_contrasena"
        android:textColor="@color/colorPrimaryDark"
        tools:targetApi="lollipop" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresar"
        android:textAllCaps="false"
        android:id="@+id/ingresar"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrate"
        android:textAllCaps="false"
        android:id="@+id/registrandote"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

</LinearLayout>